manifests.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${APPNAME}
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ${APPNAME}
  template:
    metadata:
      labels:
        app: ${APPNAME}
    spec:
      containers:
      - image: gcr.io/${PROJECT}/${APPNAME}:${TAG}
        name: ${APPNAME}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/neg: '{"ingress":true}'
    cloud.google.com/backend-config: '{"default": "custom-health-check"}'

  labels:
    app: ${APPNAME}
  name: ${APPNAME}
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: ${APPNAME}
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${APPNAME}
  # annotations:
  #   kubernetes.io/ingress.global-static-ip-name: ${APPNAME}
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ${APPNAME}
            port:
              number: 80
          # serviceName: ${APPNAME}
          # servicePort: 80apiVersion: v1
